# internal/routers/api/v1/tag.go
@@ -12,12 +12,15 @@ func NewTag() Tag {
 
 func (t Tag) Get(c *gin.Context) {}
 
+// List
 // @Summary 获取多个标签
 // @Produce json
+//
 // @Param name query string false "标签名称" maxlength(100)
 // @Param state query int false "状态" Enums(0, 1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
+//
 // @Success 200 {object} model.Tag "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
@@ -25,6 +28,44 @@ func (t Tag) Get(c *gin.Context) {}
 func (t Tag) List(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "ok"})
 }
+
+// Create
+// @Summary 创建标签
+// @Produce json
+//
+// @Param name body string true "标签名称" minlength(3) maxlength(100)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param created_by body string true "创建者" minlength(3) maxlength(100)
+//
+// @Success 200 {object} model.Tag "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {}
+
+// Update
+// @Summary 更新标签
+// @Produce json
+//
+// @Param id path int true "标签 ID"
+// @Param name body string false "标签名称" minlength(3) maxlength(100)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param modified_by body string true "修改者" minlength(3) maxlength(100)\
+//
+// @Success 200 {object} model.Tag "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {}
+
+// Delete
+// @Summary 删除标签
+// @Produce json
+//
+// @Param id path int true "标签 ID"
+//
+// @Success 200 {object} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {}
